--- a/Panels/DE1132A-R1-P1.md
+++ b/Panels/DE1132A-R1-P1.md
@@ -1,6 +1,6 @@
 ## DE 1132A – R1 – P1
 
-|#   |        Til       |Lengde|Demping|Kommentar  |
+|#   |        Til       |Lengde|Demping|Kommentar hei |
 |---:|:-----------------|-----:|------:|:----------|
 |   1|DE-1132A.101      |7.9m  | 10.0dB|           |
 |   2|DE-1132A.102      |7.7m  | 9.4dB |           |
