--- a/Panels/DE2101A-R1-P3.md
+++ b/Panels/DE2101A-R1-P3.md
@@ -1,4 +1,4 @@
-## DE 2101A - R1 - P3
+## DE 2101A - R1 - P3   3DEA
 
 |  #  |        Til       |Lengde|Demping|Kommentar|
 |----:|:-----------------|-----:|------:|:--------|
